// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> Brand story renders snapshot 1`] = `
<article
  class="banner colorBrand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="1"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorBrand"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> BrandDismissable story renders snapshot 1`] = `
<article
  class="banner colorBrand banner--horizontal banner--dismissable"
>
  <button
    class="banner__close-btn button sizeLarge variantPlain colorBrand"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="13"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="14"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorBrand"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> BrandWithAction story renders snapshot 1`] = `
<article
  class="banner colorBrand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="8"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorBrand"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="button sizeLarge variantOutline colorBrand"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> DismissableBelowContent story renders snapshot 1`] = `
<h1
  class="headingBottomSpacing heading heading--size-h1"
>
  Page Title
</h1>
`;

exports[`<Banner /> DismissableWithAction story renders snapshot 1`] = `
<article
  class="banner colorBrand banner--horizontal banner--dismissable"
>
  <button
    class="banner__close-btn button sizeLarge variantPlain colorBrand"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="23"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="24"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorBrand"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="button sizeLarge variantOutline colorBrand"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Error story renders snapshot 1`] = `
<article
  class="banner colorAlert banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="5"
    >
      error
    </title>
    <use
      xlink:href="test-file-stub#dangerous"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorAlert"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> ErrorDismissable story renders snapshot 1`] = `
<article
  class="banner colorAlert banner--horizontal banner--dismissable"
>
  <button
    class="banner__close-btn button sizeLarge variantPlain colorAlert"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="21"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="22"
    >
      error
    </title>
    <use
      xlink:href="test-file-stub#dangerous"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorAlert"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> ErrorWithAction story renders snapshot 1`] = `
<article
  class="banner colorAlert banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="12"
    >
      error
    </title>
    <use
      xlink:href="test-file-stub#dangerous"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorAlert"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="button sizeLarge variantOutline colorAlert"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Flat story renders snapshot 1`] = `
<article
  class="banner colorBrand banner--horizontal banner--flat"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="33"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorBrand"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Neutral story renders snapshot 1`] = `
<article
  class="banner colorNeutral banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="2"
    >
      notice
    </title>
    <use
      xlink:href="test-file-stub#forum"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorNeutral"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> NeutralDismissable story renders snapshot 1`] = `
<article
  class="banner colorNeutral banner--horizontal banner--dismissable"
>
  <button
    class="banner__close-btn button sizeLarge variantPlain colorNeutral"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="15"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="16"
    >
      notice
    </title>
    <use
      xlink:href="test-file-stub#forum"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorNeutral"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> NeutralWithAction story renders snapshot 1`] = `
<article
  class="banner colorNeutral banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="9"
    >
      notice
    </title>
    <use
      xlink:href="test-file-stub#forum"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorNeutral"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="button sizeLarge variantOutline colorNeutral"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> NoDescription story renders snapshot 1`] = `
<article
  class="banner colorBrand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="6"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorBrand"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> NoTitle story renders snapshot 1`] = `
<article
  class="banner colorBrand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="7"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorBrand"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Success story renders snapshot 1`] = `
<article
  class="banner colorSuccess banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="3"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorSuccess"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> SuccessDismissable story renders snapshot 1`] = `
<article
  class="banner colorSuccess banner--horizontal banner--dismissable"
>
  <button
    class="banner__close-btn button sizeLarge variantPlain colorSuccess"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="17"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="18"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorSuccess"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> SuccessWithAction story renders snapshot 1`] = `
<article
  class="banner colorSuccess banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="10"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorSuccess"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="button sizeLarge variantOutline colorSuccess"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Vertical story renders snapshot 1`] = `
<article
  class="banner colorBrand"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="27"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorBrand"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> VerticalDismissable story renders snapshot 1`] = `
<article
  class="banner colorBrand banner--dismissable"
>
  <button
    class="banner__close-btn button sizeLarge variantPlain colorBrand"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="28"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="29"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorBrand"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> VerticalDismissableWithAction story renders snapshot 1`] = `
<article
  class="banner colorBrand banner--dismissable"
>
  <button
    class="banner__close-btn button sizeLarge variantPlain colorBrand"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="31"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="32"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorBrand"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="button sizeLarge variantOutline colorBrand"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> VerticalWithAction story renders snapshot 1`] = `
<article
  class="banner colorBrand"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="30"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorBrand"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="button sizeLarge variantOutline colorBrand"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> Warning story renders snapshot 1`] = `
<article
  class="banner colorWarning banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="4"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorWarning"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> WarningDismissable story renders snapshot 1`] = `
<article
  class="banner colorWarning banner--horizontal banner--dismissable"
>
  <button
    class="banner__close-btn button sizeLarge variantPlain colorWarning"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="19"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="20"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorWarning"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> WarningWithAction story renders snapshot 1`] = `
<article
  class="banner colorWarning banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="11"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h1
        class="heading heading--size-h3 heading--inherit"
      >
        New curriculum updates are available for one or more of your courses.
      </h1>
      <p
        class="text text--body text--inherit"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <a
          class="button variantLink colorWarning"
          href="/"
        >
          click into the course
        </a>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="button sizeLarge variantOutline colorWarning"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;
